traefik/platform-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-odoo
  namespace: odoo
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /odoo
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8069
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-bank
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /bank
            pathType: Prefix
            backend:
              service:
                name: web-demo
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-grafana
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-prometheus
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
